data/derived/sp14/progs/unify/prog1723.ml.out
Characters 157-162:
  (Printf.printf "hi %s" carry;
                         ^^^^^
Error: This expression has type int but an expression was expected of type
         string
